<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/facebook_blue"
        tools:context=".FacebookLoginPage">

    <Button
            android:text="@string/facebook_login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:backgroundTint="@color/white_50"
            android:background="@drawable/rounded_corner"
            android:paddingVertical="10dp"
            android:textColor="@color/white_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            android:layout_marginTop="30dp" />

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/facebook_icon"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:tint="@color/white" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/language_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/inter"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="20dp" />

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/facebook_email_placeholder"
            android:ems="10"
            android:lineBreakStyle="loose"
            android:textColorHint="@color/white_50"
            android:id="@+id/email_input"
            android:fontFamily="@font/inter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_change"
            android:layout_marginTop="100dp" />

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/facebook_password_placeholder"
            android:ems="10"
            android:lineBreakStyle="loose"
            android:textColorHint="@color/white_50"
            android:id="@+id/password_input"
            android:fontFamily="@font/inter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginTop="20dp" />

    <TextView
            android:text="@string/facebook_sign_up_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:fontFamily="@font/inter_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:layout_marginBottom="20dp" />

    <TextView
            android:text="@string/facebook_forgot_password_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:fontFamily="@font/inter_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>