<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:background="@drawable/gradient_list"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/instagram_wordmark"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instagram_username_placeholder"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:id="@+id/username_input"
                android:textSize="14sp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:fontFamily="@font/inter" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="15dp"
            android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instagram_password_placeholder"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:id="@+id/password_input"
                android:fontFamily="@font/inter" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/instagram_login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="25dp"
            android:id="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white_50"
            android:background="@drawable/inactive_instagram_login_button"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="false" />

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_text_view"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:layout_marginTop="20dp" />

    <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/white_50"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            android:id="@+id/view" />

    <TextView
            android:text="@string/instagram_or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/white_50"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/or"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintStart_toEndOf="@+id/or" />

    <fragment
            android:id="@+id/listFragment"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            class="com.example.myapplication.FacebookLoginSection"
            tools:layout="@layout/fragment_facebook_login"
            app:layout_constraintTop_toBottomOf="@+id/or"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp" />

    <fragment
            android:id="@+id/detailFragment"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="com.example.myapplication.InstagramFooter"
            tools:layout="@layout/fragment_instagram_login_footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>